--- a/index.html
+++ b/index.html
@@ -38,68 +38,42 @@
       <div class="row">
         <div class="col-md-6">
           <!-- Personal Information -->
-          <h2>John Doe</h2>
-          <p><strong>Email:</strong> john.doe@example.com</p>
-          <p><strong>Phone:</strong> (123) 456-7890</p>
-          <p><strong>Address:</strong> 123 Main Street, City, State, ZIP</p>
+          <h2>Michael Lo</h2>
+          <p><strong>Email:</strong> lomichael620@gmail.com </p>
+	  <p><strong>Age:</strong> 17 </p>
+          <p><strong>Phone:</strong> 1+(516) 615-9009</p>
+          <p><strong>Address:</strong> 38 Derby Road, New York, 11050</p>
         </div>
         <div class="col-md-6 text-md-end">
           <!-- Profile Picture -->
-          <img src="images/aboutpicture.png" alt="Profile Picture" class="img-fluid rounded-circle profile-image">
+          <img src="images/Michael.png" alt="Profile Picture" class="img-fluid rounded-circle profile-image">
         </div>
       </div>
 
       <hr>
 
-      <h4>Objective</h4>
-      <!-- Objective Statement -->
-      <p>A motivated and dedicated professional seeking a challenging position in the field of software development.</p>
+      <h4>What I want to do</h4>
+      <!-- What I want to do Statement -->
+      <p>I want to become a video game developer and designer.</p>
 
-      <h4>Education</h4>
+      <h4>What I like to do</h4>
       <ul>
         <li>
-          <h5>Bachelor of Science in Computer Science</h5>
-          <!-- Education Institution -->
-          <p>XYZ University, City, State</p>
-          <p>Graduated: May 2022</p>
+          <h5>I like to play video games. Games I like to play include: Fortnite, Smash Bros Ultimate, and Roblox</h5>
+          <!-- Sports -->
+          <p>XYZ I swim at North Hemstead country club and JCC.</p>
+          <p>I used to play soccer for Port Soccer.</p>
         </li>
       </ul>
 
-      <h4>Skills</h4>
+      <h4>Academic Achievements</h4>
       <ul>
         <!-- List of Skills -->
-        <li>Programming Languages: Java, Python, C++</li>
-        <li>Web Development: HTML, CSS, JavaScript</li>
-        <li>Database: MySQL, MongoDB</li>
-        <li>Frameworks: Bootstrap, Django</li>
+        <li>Made Principal's list for the last 3 years in High School</li>
+        <li>Getting 3rd place twice in writing contests</li>
+        <li>Being asociated with the National Honor Society, the Spanish Honor Society, and the Rho Kappa Honor Society</li>
+        <li>Won Student of the month for the virtue of kindness</li>
       </ul>
-
-      <h4>Experience</h4>
-      <ul>
-        <li>
-          <h5>Software Developer Intern</h5>
-          <!-- Job Experience -->
-          <p>ABC Company, City, State</p>
-          <p>June 2021 - August 2021</p>
-          <ul>
-            <li>Developed and maintained web applications using Django framework</li>
-            <li>Collaborated with team members to implement new features</li>
-            <li>Participated in code reviews and testing</li>
-          </ul>
-        </li>
-      </ul>
-
-      <h4>Projects</h4>
-      <ul>
-        <li>
-          <h5>E-commerce Website</h5>
-          <!-- Project Description -->
-          <p>Developed a responsive e-commerce website using HTML, CSS, and JavaScript.</p>
-        </li>
-        <li>
-          <h5>Inventory Management System</h5>
-          <!-- Project Description -->
-          <p>Designed and implemented an inventory management system using Java and MySQL.</p>
         </li>
       </ul>
 
@@ -114,15 +88,6 @@
           <hr>
           <p class="text-center">Contact Me</p>
           <div class="text-center">
-            <!-- Social Media Links -->
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-linkedin"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-github"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-tiktok"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-instagram"></i></a>
-            <!-- New button with the rebranded X logo -->
-            <a href="#" class="btn btn-dark me-2"><strong>𝕏</strong></a>
           </div>
         </div>
       </div>
