--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li>
           <h5>I like to play video games. Games I like to play include: Fortnite, Smash Bros Ultimate, and Roblox</h5>
           <!-- Sports -->
-          <p>XYZ I swim at North Hemstead country club and JCC.</p>
+          <p>I swim at North Hemstead country club and JCC. My favorite strokes are Butterfly and Freestyle.</p>
           <p>I used to play soccer for Port Soccer.</p>
         </li>
       </ul>
